fix: no more FAT jar both Client + Server side